--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -18,6 +18,8 @@
 		</form>
 		<div>
 			<h1>Pitanja</h1>
+			<input type="text" id="js-search" placeholder="Search..." />
+			<br />
 			{{#each home_pitanja}}
 				<a href="/question/{{_id}}">{{question}}</a><br />
 			{{/each}}
