--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -23,9 +23,9 @@
 		</div>
 		<div class="Answer">
 			<ul >
-				<li style="float:left;"><a href="#">MOST POPULAR</a></li>
-  				<li style="float:left;"><a href="#">MOST RECENT</a></li>
-  				<li style="float:left;"><a href="#">MOST URGENT</a></li>
+				<li style="float:left;"><a id="js-popular" href="#">MOST POPULAR</a></li>
+  				<li style="float:left;"><a id="js-recent" href="#">MOST RECENT</a></li>
+  				<li style="float:left;"><a id="js-urgent" href="#">MOST URGENT</a></li>
   				<li><input type="text" id="j3s-search" placeholder=" Search..." style="border-radius: 40px;float:right" /></li>
   			</ul>
   			
