--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -8,8 +8,8 @@
 				<div style="font:14px;color:##767676">
 					 <ul style="float:right;">
   						<li><a href="#">HOME</a></li>
-  						<li><a href="#">ABOUT US</a></li>
-  						<li><a href="#">CONTACT US</a></li>
+  						<li><a href="/about">ABOUT US</a></li>
+  						<li><a href="/contact">CONTACT US</a></li>
 					</ul> 
 				</div>
 		    </div>
@@ -25,8 +25,8 @@
 				<li style="float:left;"><a id="js-popular" href="#">MOST POPULAR</a></li>
   				<li style="float:left;"><a id="js-recent" href="#">MOST RECENT</a></li>
   				<li style="float:left;"><a id="js-urgent" href="#">MOST URGENT</a></li>
-  				<li style="float:left;"><a id="js-urgent" href="#">UNANSWERED QUESTIONS</a></li>
-  				<li><input type="text" id="j3s-search" placeholder=" Search..." style="border-radius: 40px;float:right" /></li>
+  				<li style="float:left;"><a id="js-unanswered" href="#">UNANSWERED QUESTIONS</a></li>
+  				<li><input type="text" id="js-search" placeholder=" Search..." style="border-radius: 40px;float:right" /></li>
   			</ul>
   			
 			
