--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -50,7 +50,7 @@
 				<option value="1">1</option>
 				<option value="2">2</option>
 			</select>
-			<input type="text" id="js-location">
+			<input type="text" id="js-location" value="{{home_grad}}, {{home_drzava}}">
 
 			<input type="submit" value="ASK" />
 		</form>
