Mnogo si glup meteoru

--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -3,13 +3,15 @@
 		 <div id="header-wrapper">
 			<div id="header">
 				<div class="logo">
-					<a href="#"><div class="class">BelgradeRefugees</div></a>
+				
 				</div>
 				<div style="font:14px;color:##767676">
-					 <ul style="float:right;">
-  						<li><a href="#">HOME</a></li>
-  						<li><a href="/about">ABOUT US</a></li>
-  						<li><a href="/contact">CONTACT US</a></li>
+					 <ul>
+  				
+  						<li style="flaot:left;"><img src="assets/Inter-Ask.png" style="width:200px;height:70px;" /></li>
+					 	<li style="float:right;padding-top:30px;"><a href="#">HOME</a></li>
+  						<li style="float:right;padding-top:30px;"><a href="/about">ABOUT US</a></li>
+  						<li style="float:right;padding-top:30px;"><a href="/contact">CONTACT US</a></li>
 					</ul> 
 				</div>
 		    </div>
@@ -47,6 +49,7 @@
 				<a href="/question/{{_id}}" style="color: #767676;text-decoration: none;padding-left:15p">{{question}}</a> {{#if home_jeOdgovoreno}}<img src="assets/answered-question.png" style="float:right;width:200px;height:30px;padding-right:40px">{{else}}<img src="assets/not-answered-yet.png" style="float:right;width:200px;height:30px;padding-right:40px">{{/if}}<br />
 			</div>
 			{{/each}}
+			</div>
 
 
 		<img src="assets/lines.png" class="slika"/>
@@ -54,6 +57,9 @@
 			<li style="float:left;width:500px;height:300px;box-shadow: 5px 5px 10px #888888;">
 			<img src="assets/icon-1.png" style="float:left;padding-top:50px;padding-left:50px;"/>
 			<h3 style="float:left;color=#767676;padding-top:90px;padding-left:-50px;">Do you have a question?</h3>
+			<p style="float:left;width:400px;">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+			</p>
 			</li>
 			<li style="float:right;background-image:url('assets/text-bg.png');width:500px;height:300px;box-shadow: 5px 5px 10px #888888;"></li>
 		</ul>
