--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -19,7 +19,8 @@
 		    	 <h1 class="questions">QUESTIONS</h1>
 		    	</div>
 		    	<div class="questionText">
-		    		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		    		Migration to a new place is never simple, no matter how well it may be planned out. This is a safe place for refugees and asylum seekers to voice their questions and get reliable answers based on their location. 
+					Feel free to ask and answer, as well as give a thumbs up to helpful answers.
 		    	</div>
 		</div>
 		<script>
@@ -28,7 +29,7 @@
     
 		}
 		</script>
-		<div class="Answer">
+		<div id="top" class="Answer">
 			<ul >
 				<li style="float:left;"><a id="js-popular" href="#">MOST POPULAR</a></li>
   				<li style="float:left;"><a id="js-recent" href="#">MOST RECENT</a></li>
@@ -36,9 +37,7 @@
   				<li style="float:left;"><a id="js-unanswered" href="#">UNANSWERED QUESTIONS</a></li>
   				<li><img src="assets/ask-a-question-button.png" style="float:right;paddintg-top:-45px;width:130px;height:30px;padding-left:10px;" onClick="myFunction()"/></li>
   				<li><input type="text" id="js-search" placeholder=" Search..." style="border-radius: 40px;float:right" /></li>
-  			</ul>
-  			
-			
+  			</ul>		
 		</div>
 		<br />
 		<br />
@@ -54,14 +53,34 @@
 
 		<img src="assets/lines.png" class="slika"/>
 		<ul>
-			<li style="float:left;width:500px;height:300px;box-shadow: 5px 5px 10px #888888;">
-			<img src="assets/icon-1.png" style="float:left;padding-top:50px;padding-left:50px;"/>
-			<h3 style="float:left;color=#767676;padding-top:90px;padding-left:-50px;">Do you have a question?</h3>
-			<p style="float:left;width:400px;">
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+			<li style="float:left;width:500px;height:370px;box-shadow: 5px 5px 10px #888888;">
+			<img src="assets/icon-1.png" style="float:left;padding-top:50px;padding-left:90px;"/>
+			<h3 style="float:left;color=#767676;padding-top:100px;padding-left:-90px;">Do you have a question?</h3>
+			<p style="float:left;width:400px;padding-left:90px;">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
 			</p>
+			<a href="/ask"><img src="assets/ask-a-question-button-2.png"  style="float:left;paddintg-top:-15px;padding-left:90px;" /></a>
 			</li>
-			<li style="float:right;background-image:url('assets/text-bg.png');width:500px;height:300px;box-shadow: 5px 5px 10px #888888;"></li>
+			<li style="float:right;width:500px;height:370px;box-shadow: 5px 5px 10px #888888;">
+
+			<img src="assets/icon-2.png" style="float:left;padding-top:50px;padding-left:90px;"/>
+			<h3 style="float:left;color=#767676;padding-top:100px;padding-left:-90px;">Do you have a answer?</h3>
+			<p style="float:left;width:400px;padding-left:90px;">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+			</p>
+			<a href="#top"><img src="assets/answer-on-question.png"  style="float:left;paddintg-top:-15px;padding-left:90px;" /></a>
+			</li>
 		</ul>
-	</div>
+		<br/>
+		<br/>
+
+		</div>
+		<div class="foo blue">
+			<center><h3>Download our open data sources</h3></center>
+			<center><p style="width:500px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></center>
+			<center><img src="assets/download-now-button.png" style="width:200px;height:50px"/></center>
+		</div>
+
+		<div class="footer">
+		</div>
 </template>
