--- a/src/client/templates/ask.template.html
+++ b/src/client/templates/ask.template.html
@@ -1,10 +1,5 @@
 <template name="ask">
 	<div class="content">
-		<script language="JavaScript" type="text/javascript">
-function winClose() {
-    window.close();
-}
-</script>
 <form id="js-unesiPitanje">
 			<input type="text" id="js-question">
 			<select id="js-urgency">
@@ -13,7 +8,8 @@ function winClose() {
 			</select>
 			<input type="text" id="js-location" value="{{home_grad}}, {{home_drzava}}">
 
-			<input type="submit" value="ASK" onClick="winClose()"/>
+			<input type="submit" value="ASK" />
 		</form>
+		<div id="js-poruka"></div>
 	</div>
 </template>
