--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -2,14 +2,11 @@
 	<div class="content">
 		 <div id="header-wrapper">
 			<div id="header">
-				<div class="logo">
-				
-				</div>
 				<div style="font:14px;color:##767676">
 					 <ul>
   				
   						<li style="flaot:left;"><img src="assets/Inter-Ask.png" style="width:200px;height:70px;" /></li>
-					 	<li style="float:right;padding-top:30px;"><a href="#">HOME</a></li>
+					 	<li style="float:right;padding-top:30px;"><a href="/">HOME</a></li>
   						<li style="float:right;padding-top:30px;"><a href="/about">ABOUT US</a></li>
   						<li style="float:right;padding-top:30px;"><a href="/contact">CONTACT US</a></li>
 					</ul> 
@@ -23,11 +20,18 @@
 					Feel free to ask and answer, as well as give a thumbs up to helpful answers.
 		    	</div>
 		</div>
-		<script>
+		<script type="text/javascript">
 		function myFunction() {
    		 var myWindow = window.open("/ask", "MsgWindow", "width=200,height=100");
     
 		}
+		function myFun() {
+   				 document.getElementById("demo").innerHTML = "<p>We want to thank the Techfugee community and the Startit Center for gathering us as a team and enabling us to create this app</p>";
+				}
+		function myFun1() {
+   				 document.getElementById("demo").innerHTML = "
+				<p>We never thought that other developers would show interest in the open data we collect during the very process of app development. This positive surprise should  indicate both the importance of opening data, as well as the potential of apps feeding into each other.</p>";
+				}
 		</script>
 		<div id="top" class="Answer">
 			<ul >
@@ -76,11 +80,66 @@
 
 		</div>
 		<div class="foo blue">
-			<center><h3>Download our open data sources</h3></center>
-			<center><p style="width:500px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></center>
+			<center><h3>Download our open data</h3></center>
+			<center><p style="width:500px;">
+				We believe data deserves to be open. If you think the data this app collects might be useful for you or your organization to analyze and address issues refugees are faced with in Europe, please feel free to download and use it.
+			</p></center>
 			<center><img src="assets/download-now-button.png" style="width:200px;height:50px"/></center>
 		</div>
 
 		<div class="footer">
+			<ul style="padding-left:150px;">
+			<li style="float:left;width:250px;height:200px;">
+			<h3 style="float:left;color=#767676;">Our time</h3>
+			<p style="float:left;width:200px;">
+				
+				<b>Geek Squad</b>
+				<br />				
+  				Andrej Budincevic
+  				<br />
+  				Djordje Jankovi
+  				<br />
+  				<b>Big BOSS</b>
+  				<br />
+				Katarina Kosmina
+				<br />
+				<b>Mighty Designer</b>
+				<br/>
+				Marko Ilic
+			</p>
+			</li>
+			<li style="float:left;width:250px;height:200px">
+			<h3 style="float:left;color=#767676;">Support</h3>
+			<p style="float:left;width:200px;">
+				<script>
+				
+				</script>
+				<b onClick="myFun();">Techfugees</b>
+				<br>
+				<b onClick="myFun1();">Our community</b>
+				<div id="demo">
+				</div>
+			
+			</p>
+			</li>
+			<li style="float:left;width:250px;height:200px">
+			<h3 style="float:left;color=#767676;">Connect</h3>
+			<p style="float:left;width:200px;">
+				<a href="https://www.facebook.com/techfugeespilot/?fref=ts">Facebook</a>
+				<br/>
+				<a href="/email">Email</a>
+			</p>
+			</li>
+			
+			<li style="float:left;width:250px;height:200px">
+			<h3 style="float:left;color=#767676;">Communities 4 Refugees</h3>
+			<p style="float:left;width:200px;">
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+			</p>
+			</li>
+			
+			
+			
+		</ul>
 		</div>
 </template>
