--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -78,7 +78,7 @@
 		<div class="foo blue">
 			<center><h3>Download our open data sources</h3></center>
 			<center><p style="width:500px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p></center>
-			<center><img src="assets/download-now-button.png" style="width:200px;height:50px"/></center>
+			<center><a href="/apidoc"><img src="assets/download-now-button.png" style="width:200px;height:50px"/></a></center>
 		</div>
 
 		<div class="footer">
