--- a/src/client/templates/contact.template.html
+++ b/src/client/templates/contact.template.html
@@ -1,1 +1,12 @@
-<template name="contact"></template>
+<template name="contact">
+	<form id="js-contact">
+		Name: <input type="text" id="js-name" />
+		Email: <input type="text" id="js-email" />
+		Subject: <input type="text" id="js-subject" />
+		Text: <textarea id="js-text"></textarea>
+
+		<input type="submit" value="Send!" />
+	</form>
+	<div id="js-poruka">
+	</div>
+</template>
