--- a/src/client/templates/ask.template.html
+++ b/src/client/templates/ask.template.html
@@ -1,6 +1,9 @@
 <template name="ask">
-	<div class="content">
-<form id="js-unesiPitanje">
+	<div class="container">
+		 <div class="col-sm-12">
+            <h1>Write your problem and we will fined answer for you</h1>
+        </div>
+	<form id="js-unesiPitanje">
 			<input type="text" id="js-question">
 			<select id="js-urgency">
 				<option value="1">1</option>
