--- a/src/client/templates/home.template.html
+++ b/src/client/templates/home.template.html
@@ -2,11 +2,8 @@
   <script>
     function myFunction() {
    
-       var myWindow = window.open("/ask", "MsgWindow", "width=100","height=50","top=1000", "left=1000");
-    // Puts focus on the newWindow
-    if (window.focus) {
-        myWindow.focus();
-    }
+       var myWindow = window.open("/ask", "Ask a question", "toolbar=no,scrollbars=yes,resizable=no,top=100,left=100,width=600,height=400");
+    
     }
     </script>
 	  <div class="container">
