--- a/src/client/templates/question.template.html
+++ b/src/client/templates/question.template.html
@@ -19,7 +19,7 @@
 			<br>
 			Answer: <textarea id="js-odgovor"></textarea><br />
 			<br />
-			<input type="submit" value="Answer!" class="button"/>
+			<div class="button"><input type="submit" value="Answer!" /></div>
 		</form>
 	</div>
 
